# Gout

./: .gitignore  CHANGELOG.md  Cargo.toml  PLAN.md  README-en.md  README.md
.github/workflows/: release.yml
data/: keys.toml
docs/: spec.md
gout/: Cargo.toml
gout-api/: Cargo.toml
gout-api/src/: admin.rs  client.rs  data_channel.rs  lib.rs  proto.rs
gout-proto/: Cargo.toml
gout-proto/src/: lib.rs
gout/src/: cli.rs  config.rs  daemon.rs  main.rs  tunnel.rs
goutd/: Cargo.toml
goutd/src/: config.rs  data_server.rs  main.rs  store.rs  tunnel.rs
goutd/src/api/: auth.rs  mod.rs  tunnels.rs
goutd/src/web/: auth.rs  mod.rs
goutd/templates/: base.html  dashboard.html  keys.html  login.html
scripts/: api-test.sh  bench.sh
