[workspace]
members = ["gout-api", "gout", "goutd"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["fb0sh"]
repository = "https://github.com/fb0sh/Gout"
description = "A lightweight reverse proxy / tunnel tool. Expose local services to the public internet with one command."
