[package]
name = "gout-api"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
