[package]
name = "gout"
version.workspace = true
edition.workspace = true

[dependencies]
gout-proto = { path = "../gout-proto" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
anyhow = "1"
tempfile = "3"
tracing = "0.1"
tracing-subscriber = "0.3"
