[package]
name = "goutd"
version.workspace = true
edition.workspace = true

[dependencies]
gout-proto = { path = "../gout-proto" }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
axum = { version = "0.7", features = ["macros"] }
askama = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
