[package]
name = "goutd"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Goutd — the Gout server daemon. Manages tunnels and API keys, serves the web dashboard."

[[bin]]
name = "goutd"
path = "src/main.rs"

[dependencies]
gout-api = { path = "../gout-api", version = "0.3.0" }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
axum = { version = "0.7", features = ["macros"] }
askama = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
